fix RenamePlayer input box style on mobile devices

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -249,6 +249,7 @@ footer,
         background: inherit;
         border: none;
         border-bottom: 1px @color-interaction solid;
+        max-width: 80%;
     }
 
     input:focus {
